[package]
name = "darknet-inference-nm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
darknet = "0.3.4"
postcard = { version = "0.7.2", features = [ "alloc", "use-std" ] }
serde = { version = "1.0.115", features = ["derive"] }
